--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,17 @@
 <resources>
     <string name="app_name">CircleLive</string>
+    <string name="im_user_removed">当前账号已被移除</string>
+    <string name="im_user_restricted">当前账号被限制登录</string>
+    <string name="im_user_conflict">当前账号在其他设备登录</string>
+    <string name="im_user_password_changed">当前账号密码已被修改</string>
+    <string name="im_user_kick_by_other_devices">当前账号被其他设备踢下线</string>
+    <string name="login">登录</string>
+    <!-- Strings related to login -->
+    <string name="invalid_username">非法用户名</string>
+    <string name="invalid_password">密码最小密码长度为6个字符</string>
+    <string name="login_failed">"登录失败"</string>
+    <string name="login_username_hint">你的唯一账号</string>
+    <string name="login_password_hint">你的登录密码，不要太短哦</string>
+    <string name="logo_slogan">Your Real Live</string>
+    <string name="logo_slogan_desc">和最真的朋友Live</string>
 </resources>
